@@ -25,7 +25,55 @@ class MenusViewMenutypes extends JViewLegacy
 	{
 		$input = JFactory::getApplication()->input;
 		$this->recordId = $input->getInt('recordId');
-		$this->types    = $this->get('TypeOptions');
+		$types = $this->get('TypeOptions');
+
+		// Adding System Links
+		$list = array();
+		$o = new JObject;
+		$o->title = 'COM_MENUS_TYPE_EXTERNAL_URL';
+		$o->type = 'url';
+		$o->description  = 'COM_MENUS_TYPE_EXTERNAL_URL_DESC';
+		$o->request = null;
+		$list[] = $o;
+
+		$o = new JObject;
+		$o->title = 'COM_MENUS_TYPE_ALIAS';
+		$o->type = 'alias';
+		$o->description = 'COM_MENUS_TYPE_ALIAS_DESC';
+		$o->request = null;
+		$list[] = $o;
+
+		$o = new JObject;
+		$o->title = 'COM_MENUS_TYPE_SEPARATOR';
+		$o->type = 'separator';
+		$o->description = 'COM_MENUS_TYPE_SEPARATOR_DESC';
+		$o->request = null;
+		$list[] = $o;
+
+		$o = new JObject;
+		$o->title = 'COM_MENUS_TYPE_HEADING';
+		$o->type = 'heading';
+		$o->description = 'COM_MENUS_TYPE_HEADING_DESC';
+		$o->request = null;
+		$list[] = $o;
+		$types['COM_MENUS_TYPE_SYSTEM'] = $list;
+
+		$sortedTypes = array();
+
+		foreach ($types as $name => $list)
+		{
+			$tmp = array();
+
+			foreach ($list as $item)
+			{
+				$tmp[JText::_($item->title)] = $item;
+			}
+			ksort($tmp);
+			$sortedTypes[JText::_($name)] = $tmp;
+		}
+		ksort($sortedTypes);
+
+		$this->types = $sortedTypes;
 
 		$this->addToolbar();
 
